Refactoring to Multi-Module Maven project. Closes #1.
- Corrected .ignore so it not only ignores mentioned folders at the root level
- Create separate Maven modules for:
  	- Data model: pet-clinic-data
  		Move all data model classes to there
  		Maven POM XML:

  		- Add this:

  		    <!-- By default Spring Boot will generate a FAT executable (uber) JAR which will include ALL dependency libraries
  			We want a lean JAR with only the classes of this module in it, so we will skip the repackage goal here -->
  			<properties>
  				<spring-boot.repackage.skip>true</spring-boot.repackage.skip>
  			</properties>

  		- Dependencies migrated from Main POM XML

  			<dependency>
  				<groupId>org.springframework.boot</groupId>
  				<artifactId>spring-boot-starter-data-jpa</artifactId>
  			</dependency>

  			<dependency>
  				<groupId>com.h2database</groupId>
  				<artifactId>h2</artifactId>
  				<scope>runtime</scope>
  			</dependency>
  			<dependency>
  				<groupId>mysql</groupId>
  				<artifactId>mysql-connector-java</artifactId>
  				<scope>runtime</scope>
  			</dependency>
  			<dependency>
  				<groupId>org.projectlombok</groupId>
  				<artifactId>lombok</artifactId>
  				<optional>true</optional>
  			</dependency>

  	- Web MVC: pet-clinic-web
  		Move the main Spring-Boot application to there including the application.properties and the existing unit test
  		Maven POM XML:

  		- Add this dependency to make the web module depend on the data module (jar)
  		    <dependency>
  				<artifactId>pet-clinic-data</artifactId>
  				<groupId>guru.springframework</groupId>
  				<version>0.0.1-SNAPSHOT</version>
  			</dependency>

  		- Dependencies migrated from Main POM XML

  			<dependency>
  				<groupId>org.springframework.boot</groupId>
  				<artifactId>spring-boot-starter-actuator</artifactId>
  			</dependency>
  			<dependency>
  				<groupId>org.springframework.boot</groupId>
  				<artifactId>spring-boot-starter-thymeleaf</artifactId>
  

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
 ######################
 # Project Specific
 ######################
-/build/www/**
-/src/test/javascript/coverage/
-/src/test/javascript/PhantomJS*/
+src/test/javascript/coverage/
+src/test/javascript/PhantomJS*/
 
 ######################
 # Node
 ######################
-/node/
+node/
 node_tmp/
 node_modules/
 npm-debug.log.*
@@ -35,7 +34,7 @@ local.properties
 .settings/
 .loadpath
 .factorypath
-/src/main/resources/rebel.xml
+src/main/resources/rebel.xml
 
 # External tool builders
 .externalToolBuilders/**
@@ -67,14 +66,14 @@ local.properties
 ######################
 # Maven
 ######################
-/log/
-/target/
+log/
+target/
 
 ######################
 # Gradle
 ######################
 .gradle/
-/build/
+build/
 
 ######################
 # Package Files
@@ -109,8 +108,8 @@ Desktop.ini
 ######################
 # Directories
 ######################
-/bin/
-/deploy/
+bin/
+deploy/
 
 ######################
 # Logs
