--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 #logging.level.guru.springframework=INFO
 #logging.level.org.springframework=INFO
+
+# Internationalization
+spring.messages.basename=messages/messages
