--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -3,3 +3,6 @@
 
 # Internationalization
 spring.messages.basename=messages/messages
+
+# Active Spring Profile
+spring.profiles.active=SpringDataJPA
