Implement Find Owner functionality. Closes #53
	* OwnerController -> show owner search form

		@GetMapping("/find")
		public ModelAndView showFindOwnersForm() {
			ModelAndView mav = new ModelAndView("owners/search-form");
			mav.addObject(new Owner());

			return mav;
		}

	* Owner search template

		<html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
			<body>
				<h2>Find Owners</h2>

				<form th:object="${owner}" th:action="@{/owners}" method="get" class="form-horizontal" id="search-owner-form">
				<!--/* th:object binds a model object to the form */-->
					<div class="form-group">
						<div class="control-group" id="lastNameGroup">
							<label class="col-sm-2 control-label">Last name </label>
							<div class="col-sm-10">
								<input class="form-control" th:field="*{lastName}" size="30" maxlength="80" />
								<span class="help-inline">
									<!--/* Display (validation or binding result) error messages here */-->
									<div th:if="${#fields.hasAnyErrors()}">
										<p th:each="err : ${#fields.allErrors()}" th:text="${err}">Error</p>
									</div>
								</span>
							</div>
						</div>
					</div>
					<div class="form-group">
						<div class="col-sm-offset-2 col-sm-10">
							<button type="submit" class="btn btn-default">Find Owner</button>
						</div>
					</div>
				</form>

				<br />
				<a class="btn btn-default" th:href="@{/owners/new}">Add Owner</a>
			</body>
		</html>

	* OwnerController -> process search request

		I merged this functionality into the existing owner list page

		@GetMapping({"", "/", "/index", "/index.html"})
		public String listOwners(@ModelAttribute Owner owner, BindingResult bindingResult, Model model) {		// @ModelAttribute is used to bind the data from the owner object in the form to this method, BindingResult parameter needs to be defined directly after this
			if (StringUtils.isNotBlank(owner.getLastName())) {
				Set<Owner> owners = ownerServic

--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.messages.basename=messages/messages
 
 # Active Spring Profile
 spring.profiles.active=SpringDataJPA
+
+logging.level.org.hibernate.SQL=DEBUG
+
+# Also log prepared statement parameters
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Pretty print SQL
+spring.jpa.properties.hibernate.format_sql=true
