--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #logging.level.guru.springframework=INFO
 #logging.level.org.springframework=INFO
+#logging.level.guru.springframework.sfgpetclinic=TRACE
 
 # Internationalization
 spring.messages.basename=messages/messages
